[tool.poetry]
name = "parsekrisha"
version = "0.1.0"
description = ""
authors = ["arutem9911 <arutem99111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
requests = "^2.32.3"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
